[project]
name = "emosupport-ai"
version = "0.1.0"
description = "OpenEnv Emotional Support Agent"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"